# dscience

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
docs/: conf.py  index.rst  requirements.txt  toc.rst
dscience/: __init__.py  full.py  metadata.py
dscience/analysis/: morphology.py  peak_finding.py  stats.py
dscience/biochem/: atc_tree.py  multiwell_plate_rois.py  multiwell_plates.py  tissue_expression.py  uniprot_go.py
dscience/calc/: peak_finding.py  stats.py
dscience/core/: __init__.py  abcd.py  chars.py  exceptions.py  extended_df.py  hasher.py  internal.py  io.py  mocks.py  warning_utils.py  web_resource.py
dscience/ml/: __init__.py  accuracy_frame.py  classifier_path.py  confusion_matrix.py  decision_frame.py  sklearn_utils.py  trainable.py
dscience/support/: connection.py  df_mem_cache.py  fancy_console.py  fancy_logger.py  flexible_logger.py  log_format.py  magic_template.py  plot_ticks.py  py_dependencies.py  time_unit.py  toml_data.py
dscience/tools/: base_tools.py  call_tools.py  common_tools.py  console_tools.py  filesys_tools.py  loop_tools.py  numeric_tools.py  pandas_tools.py  path_tools.py  program_tools.py  string_tools.py  unit_tools.py
tests/dscience/: __init__.py
tests/dscience/biochem/: test_tissue_expression.py  test_well_name.py
tests/dscience/core/: test_abcd.py  test_chars.py  test_exceptions.py  test_extended_df.py  test_hasher.py  test_io.py  test_messages.py  test_warning_utils.py
tests/dscience/support/: test_py_dependencies.py  test_templates.py  test_time_unit.py
tests/dscience/tools/: test_base_tools.py  test_common_tools.py  test_filesys_tools.py  test_path_tools.py  test_string_tools.py
